fixed element spacing

--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,28 @@ h1 {
 }
 
 .f img, .e img, .m img {
-  max-width: 2em;
-  max-height: 2em;
+  max-width: 2.8em;
+  max-height: 2.8em;
+}
+
+.s {
+  margin-top: 1em;
 }
 
 .image {
-  text-align:center;
   width:32%;
+}
+
+.image-middle {
+  text-align: center;
+
+}
+.image-left {
+  text-align: left;
+}
+
+.image-right {
+  text-align: right;
 }
 
 .center {
@@ -41,4 +56,9 @@ h1 {
 
 .title {
   word-spacing: 0.3em;
+}
+
+.telephone {
+  padding: 1em;
+  margin: 1em;
 }
